--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <img  class ="iiit" src="iiitk.jpg" alt="">
           </div>
           <div class="col-lg-6 ms-auto con">
-            <img  class ="kkr" src="C:\Users\chitr\OneDrive\Documents\website\kkr.jpg" alt="">
+            <img  class ="kkr" src="kkr.jpg" alt="">
             <h2 class="big-heading_2">Took <br>UG Program at<br> IIITDM KANCHEEPURAM</h2>
           </div>
         </div>
