--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         
         <div class="row" id="page2">
           <div class="col-lg-6">
-            <h2 class="big-heading">Scholling at<br>Dr.KKR's GOWTHAM SCHOOL</h2>
+            <h2 class="big-heading">Schooling at<br>Dr.KKR's GOWTHAM SCHOOL</h2>
             <img  class ="iiit" src="iiitk.jpg" alt="">
           </div>
           <div class="col-lg-6 ms-auto con">
