--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
         </div>
        
         <div id="hobby" class="css4">
+               <h2 class="hobbies">My Frequent Things</h2>
           <div id="carouselExampleControls" class="carousel slide bby" data-ride="carousel" data-interval="3000">
             <div class="carousel-inner ert">
               <div class="container-fluid active carousel-item">
