--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
       <meta charset="utf-8">
-      <title>Myself</title>
+      <title>Portfolio</title>
        
   <script src="https://kit.fontawesome.com/43124feaf5.js" crossorigin="anonymous"></script>
 
