--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
           </div>
           <div class="col-lg-6">
             <h2 class="big-heading">Scholling at<br>Dr.KKR's GOWTHAM SCHOOL</h2>
-            <a href="https://www.iiitdm.ac.in/">
+            <a href="https://www.iiitdm.ac.in/" target="_blank">
               <img  class ="iiit" src="iiitk.jpg" alt="IIITDM">
             </a>
            
           </div>
           <div class="col-lg-6 ms-auto con">
-            <a href="http://kkrgowtham.com/">
+            <a href="http://kkrgowtham.com/" target="_blank">
               <img  class ="kkr" src="kkr.jpg" alt="KKR GOWTHAM">
             </a>
             
